<resources>
    <string name="app_name">PAMI-Projetos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nome">Nome:</string>
    <string name="orientadores">Orientadores:</string>
    <string name="sala">Sala:</string>
    <string name="turma">Turma:</string>
    <string name="salvar">Salvar</string>

</resources>
